add slack link for english users

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -10,7 +10,7 @@
     "zh": "Chinese",
     "onlyWin64": "only support win64 currently",
     "welcomeFeedback": "Welcome any feedback",
-    "community": "...",
+    "community": "slack",
     "doc": "document",
     "appIntro": "is a knowledge-based video production tool, used to make presentation videos. The screen editing part is similar to the way of using PPT/Keynote. The overall threshold for use is similar, and you can quickly make an intuitive and beautiful visual animation video.",
     "priceInfo": "Now, the software is in the testing phase, there will be no charges and no restrictions. In the future, starting from the official version, there will be trials of free and paid versions."
