add onlineVersion link

--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -16,6 +16,7 @@
     "beta": "测试版",
     "feedback": "反馈意见",
     "onlyWin64": "目前只支持win64",
+    "onlineVersion": "在线版",
     "welcomeFeedback": "欢迎任何反馈意见",
     "email": "电子邮箱",
     "community": "软件交流QQ群: 620823259",
